[package]
name = "super-solana-trading-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
amm-cli = { git = "https://github.com/raydium-io/raydium-library"}
clmm-cli = { git = "https://github.com/raydium-io/raydium-library"}
cpswap-cli = { git = "https://github.com/raydium-io/raydium-library"}
common = { git = "https://github.com/raydium-io/raydium-library"}
solana-client = { version = "<1.17.0" }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
solana-sdk = { version = "<1.17.0" }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-token-client = "0.7.1"


raydium_amm = { git = "https://github.com/raydium-io/raydium-amm", default-features = false, features = [
  "client",
] }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm", default-features = false, features = [
  "client",
] }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", default-features = false, features = [
  "client",
  "no-entrypoint",
  "cpi",
  "devnet",
] }

jito-json-rpc-client = { git = "https://github.com/wisarmy/jito-block-engine-json-rpc-client.git", package = "jito-block-engine-json-rpc-client" }

anyhow = { version = "1.0.53" }
clap = { version = "4.1.8", features = ["derive"] }
futures-util = "0.3.30"
indicatif = "0.17.8"
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.40"